--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Calculaural</title>
+    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
     <link rel="stylesheet" href="css/calculaural.css">
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="node_modules/roboto-fontface/css/roboto-fontface.css">
